# laboratory

./: .gitignore  Cargo.toml  LICENCE  README.md  README.template.md  build-readme.js  coverage.sh  output.json  simple
.github/workflows/: rust.yml
docs/: Reporters.md  hooks.md  index.md  reporters.md  spec-contexts.md  specs.md  state.md  suite-context.md  suite.md
examples/: dynamic_tests.rs  export.rs  failure.rs  hooks.rs  importing-tests.rs  json-reporter.rs  minimal-reporter.rs  nested-suites.rs  reporter_dot.rs  reporter_json.rs  reporter_json_pretty.rs  reporter_list.rs  reporter_min.rs  reporter_rust.rs  reporter_tap.rs  reporting-export.rs  reporting-json-pretty.rs  reporting-json.rs  reporting-minimal.rs  retry_spec.rs  should_panic.rs  simple.rs  skip_spec.rs  slow_times.rs  spec_only.rs  spec_options.rs  state.rs  to_result.rs
examples/output/: test-result.json
examples/reporting/: json-pretty.rs
src/: assertion.rs  data.rs  error.rs  expect.rs  lib.rs  reporter.rs  spec.rs  spec_result.rs  state.rs  suite.rs  suite_context.rs  suite_result.rs
tests/: tests.rs
tests/expected/: micro  output_json.json  output_json_pretty.json  spec_only
tests/results/: min  min-fail  output-json-pretty.json  simple-fail  spec-skip  suite-skip
