[package]
name = "laboratory"
description = "A unit test runner for Rust"
version = "0.1.0"
authors = ["Joshua Enokson <kilograhm@pm.me>"]
edition = "2018"
keywords = ["test", "tests", "unit", "unit-tests", "test-runner"]
repository = "https://github.com/enokson/laboratory"
license-file = "LICENSE"
#publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
console = "0.12.0"
serde = { version = "1.0.116", features = ["derive"] }
