[package]
name = "laboratory"
description = "A simple, expressive unit test framework for Rust"
version = "2.0.0"
authors = ["Joshua Enokson <kilograhm@pm.me>"]
edition = "2018"
keywords = ["test", "tests", "unit", "spec", "debug"]
categories = [ "development-tools::testing", "development-tools::debugging", "development-tools::profiling"  ]
repository = "https://github.com/enokson/laboratory"
homepage = "https://github.com/enokson/laboratory"
license = "MIT"

#publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
console = "0.12.0"
convert_case = "0.4.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
